--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -3,8 +3,9 @@
     <div id='bump'>
         <section class="article archive">
           <article class="archive-wrap">
+            <h2>A space for resources and collaboration on metrics-based design.</h2>
+            <hr />
               <ol class="post-list">
-                 <lh><h2><span class="bb">{{ page.title }}</span></h2></lh>
                   {% for post in site.posts %}
                   <li>
                     <div class="deets" itemscope itemtype="http://schema.org/BlogPosting" itemprop="blogPost">
