--- a/_layouts/post-no-feature.html
+++ b/_layouts/post-no-feature.html
@@ -31,7 +31,7 @@
                    {% if author %}
                   <span>
 <!-- Personal Info. -->
-                  Written by <a href="{{ author.web }}" target="_blank">{{ author.name }}</a>
+                  <p>Written by <a href="{{ author.web }}" target="_blank">{{ author.name }}</a></p>
                   </span>
                   {% endif %}
       <a class="share" href="https://twitter.com/intent/tweet?text=&quot;{{ page.title }}&quot;%20{{ site.url }}{{ page.url }}%20via%20&#64;{{ site.owner.twitter }}" data-dnt="true">Share</a>
